docs(claude): add JVM native access and Kotlin cache warning gotchas
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>